<resources>
    <string name="app_name">New_Car_Rescue</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="clear">清除</string>
    <string name="confirmed">已确认订单信息</string>

    <string name="title_text_index">首页</string>
    <string name="title_text_login">登录</string>
    <string name="title_text_recover_psw">找回密码</string>
    <string name="title_text_task_accept">任务详情</string>
    <string name="title_text_task_detail">任务基本资料</string>
    <string name="title_text_go_to_rescue">去往救援地</string>
    <string name="title_text_go_to_destination">去往目的地</string>
    <string name="title_text_satisfaction_degree">填写满意度</string>
    <string name="title_text_completion_feedback">完工反馈</string>
    <string name="title_text_order_detail">订单详情</string>
    <string name="title_text_roll_toll">路费填写</string>
    <string name="title_text_car_check">车辆检查</string>
    <string name="title_text_work_order">工单信息</string>

    <string name="dialog_name_write_pad">签字板</string>

    <!--menu start-->
    <string name="index">首页</string>
    <string name="my_order">我的订单</string>
    <string name="rescue_assistance">救援援助</string>
    <string name="shift_leave">请假换班</string>
    <string name="separation_application">离职申请</string>
    <string name="fee_registration">费用登记</string>
    <string name="payroll_inquiries">工资查看</string>
    <!--menu end-->
    <string name="apply_leave">申请请假</string>
    <string name="leave_history_list">历史请假记录</string>
    <string name="complementary_leave_prove">补交请假证明</string>
    <string name="apply_shift">申请换班</string>
    <string name="shift_history_list">历史换班记录</string>
    <string name="colleagues_shift_list">同事换班信息</string>
    <string name="apply_separation">申请离职</string>
    <string name="separation_history_list">历史离职申请记录</string>
    <string name="complementary_separation_info">补充离职信息</string>

    <string name="logoff">退出登录</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="logoff_determine">是否要退出登录？</string>
    <string name="waiting_contact">等待服务器接通电话</string>
    <string name="after_hint">如果已联系客户，请点击按钮</string>

    <string name="account_hint">手机号</string>
    <string name="password_hint">密码</string>
    <string name="forget_psw">忘记密码?</string>
    <string name="verification_hint">验证码</string>
    <string name="get_verification">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="input_transit_costs">点击填写途中费用</string>
    <string name="start_signature">填写完成，客户签字</string>
    <string name="submit_data">提交</string>
    <string name="choose_return">有费返程</string>
    <string name="choose_finish">无费返程</string>
    <string name="start_off">点击出发</string>

    <string name="aid_address">救援地址</string>

    <string name="rescue_location">救援地</string>
    <string name="destination">目的地</string>

    <string name="license_plate">车牌</string>
    <string name="brand">品牌</string>
    <string name="selegated_person">委派人</string>
    <string name="dispatcher">调度员</string>
    <string name="car_type">车型</string>
    <string name="customer_name">客户名称</string>
    <string name="payment_method">支付方式</string>
    <string name="quote">报价</string>
    <string name="remarks">备注</string>
    <string name="sample_photo">示例照</string>

    <string name="on_the_way">正在路上</string>
    <string name="complete_order">完成订单</string>


    <string name="Remarks">备注</string>
    <string name="total_amount">总金额(¥)</string>
    <string name="commission">代付费(¥)</string>
    <string name="km_num">公里数(KM)</string>
    <string name="meals">餐费(¥)</string>
    <string name="drag_mileage">拖车里程(KM)</string>
    <string name="wheel_num">小轮数(num)</string>
    <string name="road_roll">过路费(¥)</string>
    <string name="other_fee">其他费用(¥)</string>
    <string name="mileage">里程</string>
    <string name="number">请输入数量</string>
    <string name="amount">请输入金额</string>
    <string name="order_info">订单信息</string>
    <string name="order_number">订 单 号：</string>
    <string name="rescue_time">救援时间：</string>
    <string name="complete_time">完成时间：</string>
    <string name="order_status">订单状态：</string>
    <string name="case_number">案 件 号：</string>
    <string name="payment_method_">支付方式：</string>
    <string name="quote_">报价：</string>
    <string name="customer_name_">客户名称：</string>
    <string name="license_plate_">车牌：</string>
    <string name="car_type_">车型：</string>
    <string name="dispatcher_">调度员：</string>
    <string name="auditor_">审核员：</string>
    <string name="remarks_">备注：</string>
    <string name="travel">行程</string>
    <string name="count">报数</string>
    <string name="photo">照片</string>
    <string name="owner">车主：</string>
    <string name="rescue_location_">救援地：</string>
    <string name="destination_">目的地：</string>

</resources>
