<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/title_bar"
        layout="@layout/header_title_bar"/>

    <LinearLayout
        android:id="@+id/ll_recover_psw_input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_login_input"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/login_icon_size"
                android:layout_height="@dimen/login_icon_size"
                android:src="@drawable/ic_login_user" />

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:hint="@string/account_hint"
                android:inputType="phone"
                android:lines="1"
                android:maxLength="11" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/parting_line"
            android:background="@color/loginInputStroke" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/login_icon_size"
                    android:layout_height="@dimen/login_icon_size"
                    android:src="@drawable/ic_verification" />

                <EditText
                    android:id="@+id/et_verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:hint="@string/verification_hint"
                    android:lines="1" />
            </LinearLayout>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/bg_login_btn"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:text="@string/get_verification"
                android:textColor="@drawable/color_login_btn_text" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/next_step"
        android:textSize="20sp"
        android:textColor="@drawable/color_login_btn_text"
        android:background="@drawable/bg_login_btn"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ll_recover_psw_input"/>

</android.support.constraint.ConstraintLayout>